<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mathrc.LearningActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/questionEditText"
        android:layout_width="fill_parent"
        android:layout_height="190dp"
        android:layout_weight="6"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/questionText"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textSize = "14sp" >

       
    </EditText>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="nextButtonListener"
        android:text="@string/nextButtonText" />
	
	
	</RelativeLayout>
    

    
     <Button
         android:id="@+id/answer1Button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:onClick="answer1ButtonListener"
         android:text="@string/answer1ButtonText" />

    <Button
         android:id="@+id/answer2Button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:onClick="answer2ButtonListener"
         android:text="@string/answer2ButtonText" />

    <Button
         android:id="@+id/answer3Button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:onClick="answer3ButtonListener"
         android:text="@string/answer3ButtonText" />

    <Button
         android:id="@+id/answer4Button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:onClick="answer4ButtonListener"
         android:text="@string/answer4ButtonText" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

    <SeekBar
        android:id="@+id/progressBar"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:clickable="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/driveButton"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="driveButtonListener"
        android:text="@string/driveButtonText" />

    </RelativeLayout>

</LinearLayout>